# go/routers.go
@@ -55,6 +55,48 @@ var routes = Routes{
 	},
 
 	Route{
+		"AuthorAuthorIdBooksGet",
+		strings.ToUpper("Get"),
+		"/author/{authorId}/books",
+		AuthorAuthorIdBooksGet,
+	},
+
+	Route{
+		"AuthorsAuthorIdDelete",
+		strings.ToUpper("Delete"),
+		"/authors/{authorId}",
+		AuthorsAuthorIdDelete,
+	},
+
+	Route{
+		"AuthorsAuthorIdGet",
+		strings.ToUpper("Get"),
+		"/authors/{authorId}",
+		AuthorsAuthorIdGet,
+	},
+
+	Route{
+		"AuthorsAuthorIdPut",
+		strings.ToUpper("Put"),
+		"/authors/{authorId}",
+		AuthorsAuthorIdPut,
+	},
+
+	Route{
+		"AuthorsPost",
+		strings.ToUpper("Post"),
+		"/authors/",
+		AuthorsPost,
+	},
+
+	Route{
+		"BooksBookIdAuthorsGet",
+		strings.ToUpper("Get"),
+		"/books/{bookId}/authors",
+		BooksBookIdAuthorsGet,
+	},
+
+	Route{
 		"BooksBookIdDelete",
 		strings.ToUpper("Delete"),
 		"/books/{bookId}",
@@ -69,6 +111,13 @@ var routes = Routes{
 	},
 
 	Route{
+		"BooksBookIdPublishersGet",
+		strings.ToUpper("Get"),
+		"/books/{bookId}/publishers",
+		BooksBookIdPublishersGet,
+	},
+
+	Route{
 		"BooksBookIdPut",
 		strings.ToUpper("Put"),
 		"/books/{bookId}",
@@ -80,5 +129,40 @@ var routes = Routes{
 		strings.ToUpper("Post"),
 		"/books/",
 		BooksPost,
+	},
+
+	Route{
+		"PublisherPublisherIdBooksGet",
+		strings.ToUpper("Get"),
+		"/publisher/{publisherId}/books",
+		PublisherPublisherIdBooksGet,
+	},
+
+	Route{
+		"PublishersPost",
+		strings.ToUpper("Post"),
+		"/publishers/",
+		PublishersPost,
+	},
+
+	Route{
+		"PublishersPublisherIdDelete",
+		strings.ToUpper("Delete"),
+		"/publishers/{publisherId}",
+		PublishersPublisherIdDelete,
+	},
+
+	Route{
+		"PublishersPublisherIdGet",
+		strings.ToUpper("Get"),
+		"/publishers/{publisherId}",
+		PublishersPublisherIdGet,
+	},
+
+	Route{
+		"PublishersPublisherIdPut",
+		strings.ToUpper("Put"),
+		"/publishers/{publisherId}",
+		PublishersPublisherIdPut,
 	},
 }
